--- a/site/src/Ntorre/Velobleu/Resources/views/Front/index.html.twig
+++ b/site/src/Ntorre/Velobleu/Resources/views/Front/index.html.twig
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyDe5b6YoBf3ijUIpXsQeqV1ceg6LpQ_5mY"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
     <script src="static/js/velobleuMap.js"></script>
 
     <style>
