--- a/site/src/Ntorre/Velobleu/Resources/views/Front/index.html.twig
+++ b/site/src/Ntorre/Velobleu/Resources/views/Front/index.html.twig
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDe5b6YoBf3ijUIpXsQeqV1ceg6LpQ_5mY"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDe5b6YoBf3ijUIpXsQeqV1ceg6LpQ_5mY&libraries=visualization"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
     <script src="static/js/velobleuMap.js"></script>
@@ -28,6 +28,12 @@
             width: 100%;
             height: 100%;
         }
+        #app-toolbox {
+            z-index: 1000;
+            position: absolute;
+            top: 50%;
+            right: 0;
+        }
     </style>
 </head>
 <body>
@@ -35,6 +41,13 @@
 <div id="app">
     <div id="velobleu-map"></div>
 </div>
+
+<script id="tpl-app-toolbox" type="text/x-handlebars-template">
+    <div id="app-toolbox" class="well">
+        <h2>Toolbox</h2>
+        <button id="app-heatmap" class="btn btn-secondary btn-sm">Heatmap</button>
+    </div>
+</script>
 
 </body>
 </html>
